// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`title Renders \`title\` with custom props 1`] = `
<widget-settings-item-stub
  optional="true"
  title="Custom title"
>
  <div
    class="v-input v-text-field v-text-field--placeholder v-input--is-label-active v-input--is-dirty theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            placeholder="Widget title"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`title Renders \`title\` with default props 1`] = `
<widget-settings-item-stub
  optional="true"
  title="Title"
>
  <div
    class="v-input v-text-field v-text-field--placeholder theme--light"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-text-field__slot"
        >
          <input
            placeholder="Widget title"
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
